Spacing fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
   max-width: 50%;
-  margin-top: 20px; 
+  margin: 0 auto; 
  }
  
  body {
-  padding-top: 90px;
+  padding-top: 20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
