--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -36,6 +36,10 @@
   line-height: 2;
   margin-left: 5px;
  }
+
+ .Clearfix {
+  padding-left: 30px; 
+ }
  
  .Forecasting {
   color: #868b90;
@@ -50,12 +54,13 @@
   display: block;
   font-family: arial, sans-serif;
   font-size: 25px;
-  font-weight: 400;
+  font-weight: 300;
   height: 23px;
   line-height: 24px;
   text-align: right;
-  width: 340px;
+  width: 400px;
   list-style: none;
+  
  }
  
  .Footer {
@@ -74,9 +79,14 @@
  text-align: center;
  border-bottom-width: px;
  }
+
+ .col-6 {
+  padding-right: -20px; 
+ }
  
  .col-10 {
   padding-top: 6px;
   padding-right: 1px; 
+  padding-left: 20px;
  }
  
